# system

./: .gitignore  .prettierignore  README.md  bridge.config.example.json  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
app/src/: App.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: bridge.rs  config.rs  main.rs  permissions.rs
app/src/components/: Onboarding.tsx
cloudflare-agent/: .dev.vars.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
cloudflare-agent/src/: server.ts  ui.ts
cloudflare-agent/src/providers/: anthropic.ts  github-copilot.ts  index.ts
docs/: api.md  index.html  llms-full.txt  llms.txt
src/bridge/: http-server.ts  server.ts  tools.ts
src/bridge/tools/: browser.ts  calendar.ts  core.ts  display.ts  finder.ts  index.ts  input.ts  messaging.ts  music.ts  notes.ts  raycast.ts  reminders.ts  screen.ts  screenshot.ts  shortcuts.ts  status.ts  system.ts  types.ts  volume.ts
src/bridge/tools/__tests__/: command.test.ts  tools.test.ts  validation.test.ts  volume.test.ts
src/bridge/tools/utils/: command.ts  validation.ts
src/cli/: check.ts  setup.ts  start.ts
